--- a/css/media.css
+++ b/css/media.css
@@ -86,6 +86,9 @@
     .brands__item {
         width: 100%;
     }
+    .products__main.tiles {
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
 
 @media (max-width: 1320px) {
@@ -192,6 +195,9 @@
 
     .brand-banner__text {
         font-size: 24px;
+    }
+    .products__main.tiles {
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
@@ -342,15 +348,13 @@
         width: auto;
     }
 
-    .bestseller .round-btn--cart {
+    .round-btn--cart {
         display: none;
     }
 
-    .bestseller .product-card__footer {
+    .product-card__footer {
         display: none;
     }
-
-
 
     .bestseller .product-card__article,
     .bestseller .product-card__name {
@@ -422,6 +426,96 @@
     #mobile-bottom-menu {
         display: flex;
     }
+    .footer {
+        padding-bottom: 100px;
+    }
+    .products-view-buttons {
+        display: none;
+    }
+    .products__header {
+        justify-content: space-between;
+    }
+    .products__header-mobile-btn {
+        display: block;
+    }
+    .aside {
+        position: fixed;
+        width: 100%;
+        z-index: 960;
+        top: 0;
+        bottom: 0;
+        left: -100%;
+        overflow: hidden;
+        overflow-y: auto;
+    }
+    .aside.active {
+        left: 0;
+    }
+    .aside__inner {
+        padding: 35px;
+        background-color: var(--search-color);
+        width: 50%;
+        overflow: hidden;
+        overflow-y: auto;
+        height: 100%;
+        min-width: 320px;
+    }
+    .filter-title {
+        color: #fff;
+    }
+    .filter-items {
+        margin-top: 25px;
+        overflow: hidden;
+        overflow-y: auto;
+    }
+    .catalog__inner {
+        display: block;
+    }
+    .feedback-banner__inner {
+        gap: 10px;
+    }
+    .feedback-banner__text {
+        font-size: 14px;
+    }
+    .feedback-banner__form input {
+        width: auto;
+        padding: 10px 15px;
+        font-size: 14px;
+    }
+    .feedback-banner__form input::placeholder {
+        font-size: 14px;
+    }
+    .rect-btn--feedback-banner {
+        font-size: 14px;
+        padding: 10px;
+    }
+    .product-card {
+        min-width: auto;
+    }
+    .products__main.tiles {
+        grid-template-columns: repeat(3, 1fr);
+    }
+    .product-card__mobile-footer {
+        display: block;
+        margin-top: 0;
+    }
+    .page-banner {
+        padding: 35px 0 35px 35px;
+    }
+    .filter-item {
+        background-color: var(--main-black);
+    }
+    .filter-item.check .filter-item__value span,
+    .filter-item__header,
+    .divider,
+    .filter-item__label span,
+    .filter-item__label span.filter-count,
+    .filter-item__footer {
+        color: #fff;
+    }
+    .filter-item__header::after {
+        background-image: url('../img/icons/arrow-fliter-white.svg');
+    }
 }
 
 @media (max-width: 820px) {
@@ -436,6 +530,9 @@
     .footer__nav-item+.footer__nav-item,
     .footer__nav-list {
         margin-top: 10px;
+    }
+    .products__main.tiles {
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
@@ -593,6 +690,10 @@
     .rect-btn--faq {
         font-size: 16px;
         padding: 10px;
+    }
+
+    .product-card__name {
+        margin-top: 5px;
     }
 }
 
@@ -780,6 +881,33 @@
     .header__logo {
         max-width: 60px;
     }
+    .feedback-banner__text {
+        display: none;
+    }
+    .feedback-banner__form {
+        justify-content: space-between;
+        width: 100%;
+    }
+    .feedback-banner__form input,
+    .rect-btn--feedback-banner {
+        width: 50%;
+    }
+    .product-card__img-box {
+        height: 200px;
+    }
+    .page-banner {
+        padding: 15px 0 15px 15px;
+    }
+    .sort span,
+    .sort-select {
+        font-size: 12px;
+    }
+    .sort-select {
+        padding: 7px 10px;
+    }
+    .rect-btn--product-header-mobile {
+        padding: 8px;
+    }
 }
 
 @media (max-width: 500px) {
@@ -819,6 +947,38 @@
     .header__mobile-left {
         width: auto;
         gap: 20px;
+    }
+    .product-card__name {
+        margin-top: 0px;
+    }
+    .product-card__img-box {
+        height: 155px;
+    }
+    .page-banner {
+        padding: 0;
+        background: transparent;
+    }
+    .tags__item {
+        padding: 3px 9px;
+        height: auto;
+    }
+    .tags__item a {
+        font-size: 12px;
+    }
+    .counter {
+        font-size: 12px;
+        padding: 0 5px;
+        height: auto;
+    }
+    .promo-banner.promo-banner--catalog {
+        padding: 25px;
+    }
+    .catalog-popup__categories-text {
+        font-size: 14px;
+    }
+    .rect-btn--catalog-popup {
+        padding: 8px;
+        font-size: 12px;
     }
 }
 
@@ -869,8 +1029,8 @@
     }
 
     .product-card__info-box .product-card__color-label {
-        width: 10px;
-        height: 10px;
+        width: 15px;
+        height: 15px;
     }
 
     .product-info__status {
@@ -935,6 +1095,35 @@
     .rect-btn--faq {
         font-size: 12px;
         margin-top: 10px;
+    }
+    .round-btn--fav img {
+        max-width: 9px;
+    }
+    .round-btn--compare img {
+        max-width: 10px;
+    }
+    .sort-select {
+        width: 120px;
+        margin-left: 5px;
+    }
+    .sort::after {
+        right: 10px;
+    }
+    .products__main {
+        gap: 5px;
+    }
+    .catalog-popup__categories-text {
+        font-size: 12px;
+    }
+    .rect-btn--catalog-popup {
+        font-size: 10px;
+    }
+    .rect-btn--products {
+        padding: 10px;
+        font-size: 12px;
+    }
+    .tags {
+        gap: 5px;
     }
 }
 
@@ -1194,12 +1383,8 @@
         color: var(--main-blue);
     }
 
-    .bestseller .product-card:hover .product-card__footer {
-        display: none;
-    }
-
     .popular-card:hover .popular__img img {
-        transform: translateX(-50%) scale(1.08);
+        transform: translateX(0) scale(1.08);
         color: var(--main-blue)
     }
 
