--- a/css/catalog.css
+++ b/css/catalog.css
@@ -19,6 +19,10 @@
     top: 88px;
 }
 
+.filter {
+    position: relative;
+}
+
 .filter-title {
     font-size: 24px;
     line-height: 1.5;
@@ -585,6 +589,7 @@ ul.products-pagination {
     min-height: 280px;
     padding: 20px;
     display: flex;
+    background-color: #fff;
 }
 
 .product-card.row .product-card__img-box {
@@ -650,7 +655,7 @@ ul.products-pagination {
 
 .product-card.row .property-name {
     position: relative;
-    width: 40%;
+    width: 60%;
 }
 
 .product-card.row .property-name span {
