--- a/css/global.css
+++ b/css/global.css
@@ -545,7 +545,7 @@ select::-ms-expand {
 
 .header-menu.active .header-menu__inner {
     left: 0;
-    transition: .5s;
+    transition: var(--alt-transition);
 }
 
 .header-menu__inner::-webkit-scrollbar,
