--- a/css/style.css
+++ b/css/style.css
@@ -1688,7 +1688,7 @@ body.active {
     position: relative;
     vertical-align: top;
     display: inline-block;
-    margin-left: 15px;
+    margin-left: 10px;
 }
 
 .product-card__price-old::before {
@@ -2735,6 +2735,7 @@ a.footer__nav-link--show {
     margin-top: 20px;
     gap: 15px;
     position: relative;
+    justify-content: space-between;
 }
 
 .frame {
